# python-low-level-design

./: .gitignore  DesignPatternsForApps.xlsx
Calculator/: .gitignore  README.md  application.py  cli.py  factories.py  features.py  gui.py
Calculator-Multi/: factories.py  gui.py
Hackathon/: .pre-commit-config.yaml  DesignSpecs.xlsx  README.md  compose.yaml  pyproject.toml  ~$DesignSpecs.xlsx
Hackathon/UML/: BookExplorer.rtf  user.drawio
Hackathon/backend/: Dockerfile  alembic.ini  modify-hosts.sh  requirements.txt
Hackathon/backend/alembic/: env.py
Hackathon/backend/alembic/versions/: 14ba47870b8c_.py
Hackathon/backend/api/: main.py
Hackathon/backend/api/controllers/: AdminController.py  BooksController.py  ExploreController.py  HealthController.py  OrderController.py  PaymentController.py  UserController.py
Hackathon/backend/api/factories/: user_factory.py
Hackathon/backend/api/framework/: database.py  initial_setup.py  schema.py
Hackathon/backend/api/models/: auth_model.py  book_model.py  transaction_model.py  user_model.py
Hackathon/backend/api/services/: AuthService.py  BooksService.py  ExploreService.py  PaymentService.py
Hackathon/database/: Dockerfile
Hackathon/frontend/: package-lock.json
Hackathon/frontend/src/: App.css
Hackathon/frontend/src/components/: Home.js  Login.css
frontend/src/: App.js
frontend/src/components/: Login.js
