[tool.poetry]
name = "library-management"
version = "0.1.0"
description = ""
authors = ["Luv Suneja <luvsuneja@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.103.2"
pydantic = "^2.4.2"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
